--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <i class="icon icon-list btn-mobile-menu__icon"></i>
   <i class="icon icon-x-circle btn-mobile-close__icon hidden"></i>
 </span>
-  
+
 <header class="panel-cover" style="background-image: url({{ "images/cover.jpg" | prepend: site.baseurl }})">
   <div class="panel-main">
 
@@ -26,7 +26,17 @@
 
           <nav class="cover-navigation navigation--social">
             <ul class="navigation">
-          
+
+            {% if site.author.twitter_username %}
+              <!-- Twitter -->
+              <li class="navigation__item">
+                <a href="http://{{ site.author.tumblr }}.tumblr.com/" title="@{{ site.author.tumblr }} on Tumblr" target="_blank">
+                  <i class="icon icon-social-tumblr"></i>
+                  <span class="label">Tumblr</span>
+                </a>
+              </li>
+            {% endif %}
+
             {% if site.author.twitter_username %}
               <!-- Twitter -->
               <li class="navigation__item">
@@ -78,13 +88,13 @@
             {% endif %}
 
             <!-- RSS -->
-            <li class="navigation__item">
+            <!-- <li class="navigation__item">
               <a href="{{ "feed.xml" | prepend: site.baseurl }}" title="Subscribe" target="_blank">
                 <i class="icon icon-rss"></i>
                 <span class="label">RSS</span>
               </a>
-            </li>
-          
+            </li> -->
+
             </ul>
           </nav>
 
