--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,14 +3,13 @@
   {% include head.html %}
 
   <body>
-    {% include header.html %}
 
     <div class="content-wrapper">
       <div class="content-wrapper__inner">
         {{ content }}
       </div>
 
-      {% include footer.html %}
+      <!-- {% include footer.html %} -->
     </div>
   </body>
 </html>
