--- a/css/uno.css
+++ b/css/uno.css
@@ -1100,11 +1100,17 @@ pre {
 	z-index: 800;
 	width: 60%;
 	max-width: 800px;
-	margin-left: 40%; }
+
+	margin-left: auto;
+	margin-right: auto;
+
+	/*margin-left: 40%;*/
+}
 
 .content-wrapper__inner {
 	margin: 0 10%;
-	padding: 50px 0; }
+	padding: 25px 0;
+}
 
 .footer {
 	display: block;
@@ -1559,7 +1565,8 @@ input[type="tel"] {
 
 @media all and (min-width: 1300px) {
 	.content-wrapper {
-		margin-left: 530px; } }
+		/*margin-left: 530px; */
+	} }
 @media all and (max-width: 1100px) {
 	.panel-cover__logo {
 		width: 70px; }
