--- a/css/uno.css
+++ b/css/uno.css
@@ -9,6 +9,9 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 	padding: 0;
 	border: 0;
 	font-size: 100%;
+
+	/*font-size-adjust: 0.5;*/
+
 	font: inherit;
 	vertical-align: baseline; }
 
@@ -1098,8 +1101,9 @@ pre {
 
 .content-wrapper {
 	z-index: 800;
-	width: 60%;
-	max-width: 800px;
+	/*width: 60%;*/
+	width: 80%;
+	/*max-width: 800px;*/
 
 	margin-left: auto;
 	margin-right: auto;
